minor changes to text

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                     <div>
                         <i class="devicon-c-plain-wordmark me-3 " style="font-size: 3rem"></i>
                         <i class="devicon-python-plain-wordmark me-3" style="font-size: 3rem"></i>
+                        <i class="devicon-java-plain-wordmark me-3" style="font-size: 3rem"></i>
                         <i class="devicon-mysql-plain-wordmark me-3" style="font-size: 3rem"></i>
                         <i class="devicon-html5-plain-wordmark me-3" style="font-size: 3rem"></i>
                         <i class="devicon-css3-plain-wordmark me-3" style="font-size: 3rem"></i>
-                        <i class="devicon-bootstrap-plain-wordmark me-3" style="font-size: 3rem"></i>
                     </div>
                 </div>
             </div>
@@ -107,12 +107,14 @@
             <div class="row mt-3 align-items-center">
                 <div class="col-lg-8">
                     <div class="">
-                        <p>Nach einer erfahrungsreichen Karriere habe ich mich 2023 entschlossen, den Sprung zu wagen
-                            und meine Leidenschaft zum Beruf zu machen. Aktuell befinde ich mich in der Umschulung zum
-                            Fachinformatiker für Anwendungsentwicklung (IHK) und fühle mich in diesem Tätigkeitsfeld zu
-                            Hause. Seit April 2024 absolviere ich zudem ein ausbildungs-/berufsbegleitendes Studium der
-                            Informatik, um Ausbildungsinhalte zu vertiefen und mir erweitertes mathematisches Wissen
-                            anzueignen.<br>
+                        <p>
+                            Nach einer erfahrungsreichen Karriere habe ich mich 2023 entschlossen, den Sprung zu wagen
+                            und doch noch in einen Beruf zu wechseln, der meinen Fähigkeiten und Neigungen etspricht.
+                            Aktuell befinde ich mich in der Umschulung zum Fachinformatiker für Anwendungsentwicklung
+                            (IHK) und fühle mich in diesem Tätigkeitsfeld zu Hause. Seit April 2024 absolviere ich zudem
+                            ein ausbildungs-/berufsbegleitendes Studium der Informatik, um Ausbildungsinhalte zu
+                            vertiefen und mir v.a. erweitertes mathematisches Wissen anzueignen.<br>
+
                             <br>Durch meine bisherige Ausbildung und verschiedene Weiterbildungen verfüge ich bereits
                             über gute Grundkenntnisse in der Anwendungsentwicklung sowie im Umgang mit verschiedenen
                             Programmiersprachen. Mein Wissen werde ich in der kommenden Zeit noch deutlich erweitern und
@@ -179,35 +181,37 @@
                                                 Python</span>
                                             <span class="d-inline-flex alert alert-info p-2">Programmiersprache:
                                                 C</span>
-                                            <span class="d-inline-flex alert alert-secondary p-2">Objektorientierte
+                                            <span class="d-inline-flex alert alert-info p-2">Objektorientierte
                                                 Programmierung</span>
-                                            <span class="d-inline-flex alert alert-secondary p-2">Programmiersprache:
-                                                C#</span>
-                                            <span class="d-inline-flex alert alert-secondary p-2">Programmiersprache:
+                                            <span class="d-inline-flex alert alert-info p-2">Programmiersprache:
                                                 Java</span>
                                             <span class="d-inline-flex alert alert-secondary p-2">Datenverarbeitung in
                                                 Java</span>
                                             <span class="d-inline-flex alert alert-secondary p-2">Interaktive
                                                 Webanwendungen mit Datenbankanbindung</span>
+                                            <span class="d-inline-flex alert alert-secondary p-2">Programmiersprache:
+                                                C#</span>
+                                            <span class="d-inline-flex alert alert-secondary p-2">Programmiersprache:
+                                                PHP</span>
                                         </div>
                                     </div>
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>Meine bisherigen Ausbildungsinhalte als Fachinformatiker bezogen sich auf die
-                                            Themenkomplexe Hardware, Betriebssysteme, Rechnernetze, Webdesign,
-                                            Datenbanken, prozedurale Programmierung und UML. Tiefergehendes Wissen im
-                                            Feld Anwendungsentwicklung habe ich mir zudem ausbildungsbegleitend im
-                                            Rahmen verschiedener Weiterbildungen angeeignet. Bei der Erstellung einer
-                                            Vielzahl von Befehlszeilen-Programmen und der eigenständigen Konzeption und
-                                            Umsetzung eines komplexeres Pojekts konnnte ich erste praktische Erfahrung
-                                            sammeln. Die Programmiersprachen meiner Wahl sind aktuell Python und C.
-                                            Python bildete meinen Einstieg in die Materie. C lerne ich vor allem, um
-                                            komplexere Zusammenhänge und Grundlagen zu verstehen.<br>
+                                        <p>
+                                            Meine bisherigen Ausbildungsinhalte als Fachinformatiker bezogen sich auf
+                                            die Themenkomplexe Hardware, Betriebssysteme, Rechnernetze, Webdesign,
+                                            Datenbanken, UML, Anwendungsentwicklung, prozedurale und objektorientierte
+                                            Programmierung.<br>
 
-                                            <br>Bis Praktikumsbeginn wird Java im Zusammenhang mit objektorientierter
-                                            Programmierung und Datenverarbeitung einen inhaltlichen Schwerpunkt meiner
-                                            Ausbildung darstellen. Im Herbst diesen Jahres werde ich dann in der Lage
-                                            sein, weitgehend eigenständig interaktive Webanwendungen mit
-                                            Datenbankanbindung zu entwickeln.
+                                            <br>Bei der Erstellung einer Vielzahl von Befehlszeilen-Programmen
+                                            und der eigenständigen Konzeption und Umsetzung einiger komplexerer Pojekte,
+                                            konnte ich bereits erste praktische Erfahrung im Feld Anwendungsentwicklung
+                                            sammeln.<br>
+
+                                            <br>Die Programmiersprachen meiner Wahl sind aktuell Python, C und Java.
+                                            Python bildete meinen Einstieg in die Materie. C lerne ich vor allem, um
+                                            komplexere Zusammenhänge und Grundlagen zu verstehen. Bis Praktikumsbeginn
+                                            stellt nun Java im Zusammenhang mit objektorientierter Programmierung und
+                                            Datenverarbeitung einen inhaltlichen Schwerpunkt meiner Ausbildung dar.
                                         </p>
                                     </div>
                                 </div>
@@ -238,7 +242,8 @@
                                         </div>
                                     </div>
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>Ich bin ab diesem Sommersemester als Teilzeitstudierender im Studiengang
+                                        <p>
+                                            Ich bin ab diesem Sommersemester als Teilzeitstudierender im Studiengang
                                             Informatik (B.Sc.) eingeschrieben. In der Vergangenheit habe ich bereits
                                             länger studiert, fühle mich der Herrausforderung gewachsen und freue mich
                                             auf anspruchsvolle Inhalte. Spezielles Interesse zeige ich dabei an der
@@ -266,7 +271,8 @@
 
                                 <div id="collapseGTA" class="collapse">
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>Gestaltungstechnische Assistenten wirken an der Konzeption von
+                                        <p>
+                                            Gestaltungstechnische Assistenten wirken an der Konzeption von
                                             Druckerzeugnissen oder Online-Medien mit. Sie setzen Kundenangaben in
                                             multimediale Produkte um. Die Ausbildung ist landesrechtlich geregelt und
                                             führt zu einer staatlichen Abschlussprüfung.</p>
@@ -432,8 +438,9 @@
                                         </div>
                                     </div>
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>Der Kurs hat einen Umfang von etwa 300 Stunden und vermittelt die Grundlagen
-                                            zur erstellung statischer responsiver Websites mit HTML und CSS. Der Fokus
+                                        <p>
+                                            Der Kurs hat einen Umfang von etwa 300 Stunden und vermittelt die Grundlagen
+                                            zur erstellung statischer responsiver Webseiten mit HTML und CSS. Der Fokus
                                             liegt dabei auf eigenständigen Bearbeitung realitätsbezogner Projekte.
                                             Teilnehmer, die bei 5 Projekten ein zufriedenstellendes Ergebnis vorweisen,
                                             erhalten ein Zertifikat.</p>
@@ -474,9 +481,10 @@
                                         </div>
                                     </div>
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>In Deutschland geboren und aufgewachsen, spreche ich muttersprachlich
+                                        <p>
+                                            In Deutschland geboren und aufgewachsen, spreche ich muttersprachlich
                                             Deutsch. Während einer früheren Tätigkeiteit als telefonischer und
-                                            schriftlicher Kundenbetreuer, hatte ich Gelegenheit, mein sprachliches
+                                            schriftlicher Kundenbetreuer, hatte ich zudem Gelegenheit, mein sprachliches
                                             Können zu entwickeln und kommuniziere allgemein auf einem sehr hohen Niveau.
                                         </p>
                                     </div>
@@ -507,7 +515,8 @@
                                         </div>
                                     </div>
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>Ich habe längere Zeit im Ausland gelebt und kommuniziere beruflich wie auch
+                                        <p>
+                                            Ich habe längere Zeit im Ausland gelebt und kommuniziere beruflich wie auch
                                             privat bilingual. Mein Englisch steht dem Deutschen dabei nur unwesentlich
                                             nach und erlaubt es mir, mich in allen Lebenslagen souverän zu verständigen.
                                         </p>
@@ -557,12 +566,13 @@
 
                                 <div id="collapsePLAN" class="collapse">
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>Ich habe Planung studiert und die damit verbundenen Herangehensweisen
-                                            verinnerlicht. Dabei spielt es für mich keine Rolle, ob ich mein Wissen im
-                                            Rahmen gröẞerer Projekte oder zur Selbstorganisation im Alltagsgeschäft
-                                            anwende. Als analytisch veranlagter Mensch fällt es mir zudem leicht,
-                                            Situationen ganzheitlich zu erfassen und eine auf Chancen und Risiken
-                                            abgestimmte Vorgehensweise zu entwickeln.</p>
+                                        <p>
+                                            Ich habe Planung studiert und die damit verbundenen Heran- und
+                                            Vorgehensweisen verinnerlicht. Dabei spielt es für mich keine Rolle, ob ich
+                                            mein Wissen im Rahmen gröẞerer Projekte oder zur Selbstorganisation im
+                                            Alltagsgeschäft anwende. Als analytisch veranlagter Mensch fällt es mir
+                                            leicht, Situationen ganzheitlich zu erfassen und eine auf Chancen und
+                                            Risiken abgestimmte Vorgehensweise zu entwickeln.</p>
                                     </div>
                                 </div>
 
@@ -591,10 +601,12 @@
 
                                 <div id="collapseOPS" class="collapse">
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>Während meiner mehrjährigen Tätigkeit im operativen Management hatte ich
+                                        <p>
+                                            Während meiner mehrjährigen Tätigkeit im operativen Management hatte ich
                                             täglich Gelegenheit, meine Problemlösungsfähigkeit unter Beweis zu stellen.
-                                            Meine konzeptionelle Stärke befähigt mich zu planvollem und zielorientiertem
-                                            Handeln, auch in herausfordernden Situationen.</p>
+                                            Meine konzeptionelle Stärke befähigt mich - auch in herausfordernden
+                                            Situationen - zu planvollem und zielorientiertem Handeln.
+                                        </p>
                                     </div>
                                 </div>
 
@@ -624,8 +636,9 @@
 
                                 <div id="collapseCOM" class="collapse">
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>Als ehemaliger Kundenbetreuer liegt mir Kommunikation im Blut. Mit meiner
-                                            offenen und freundlichen Art konnte ich dabei Erfolge feiern und nachfolgend
+                                        <p>
+                                            Als ehemaliger Kundenbetreuer liegt mir Kommunikation im Blut. Mit meiner
+                                            offenen und freundlichen Art konnte ich dabei Erfolge feiern und später
                                             als Führungskraft und Performance-Coach meine zwischenmenschlichen
                                             Fähigkeiten weiter ausbauen.</p>
                                     </div>
@@ -664,7 +677,8 @@
 
                                 <h5 class="card-title display-8 fw-bold my-4">Karteikarten erstellen und lernen</h5>
 
-                                <a href="https://youtu.be/_rOrLG_30Hs" class="btn btn-primary col-12 mb-2 col-md-3" role="button">
+                                <a href="https://youtu.be/_rOrLG_30Hs" class="btn btn-primary col-12 mb-2 col-md-3"
+                                    role="button">
                                     <i class="bi bi-youtube me-2"></i>Demo
                                 </a>
 
@@ -681,9 +695,11 @@
 
                                 <div id="collapsePFL" class="collapse">
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>FlashLine_ ist eine Kommandozeilenanwendung zum erstellen, verwalten und
+                                        <p>
+                                            FlashLine_ ist eine Kommandozeilenanwendung zum erstellen, verwalten und
                                             lernen von Karteikarten. Das Programm kommt mit einer eignen UI-Bibliothek
                                             und Speicherfunktion über JSON.<br>
+
                                             <br>FlashLine_ wurde als Abschlussprojekt für CS50's Introduction to
                                             Programming with Python von HarvardX erstellt.
                                         </p>
@@ -723,9 +739,11 @@
 
                                 <div id="collapseLinGuess" class="collapse">
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>LinGuess_ ist ein Worträtselspiel vergleichbar mit 'Wordle'. Spieler
+                                        <p>
+                                            LinGuess_ ist ein Worträtselspiel vergleichbar mit 'Wordle'. Spieler
                                             versuchen, ein Wort innerhalb einer begrenzten Anzahl von Versuchen zu
                                             erraten.<br>
+
                                             <br>Das Spiel wurde ursprünglich für CS50’s Introduction to Computer Science
                                             erstellt, ähnelt dieser originalen Form allerdings nur noch teilweise.
                                             Das Programm wurde stark modifiziert und erweitert, um Abhängigkeiten zu
