--- a/index.html
+++ b/index.html
@@ -716,8 +716,8 @@
                             <div class="card-body">
 
                                 <div class="ratio ratio-16x9">
-                                    <img src="images/linguess_cover.jpg" alt="">
-                                    <h5 class="card-title display-2 fw-bold mt-4 ms-4">LinGuess_</h5>
+                                    <img src="images/languess_cover.jpg" alt="">
+                                    <h5 class="card-title display-2 fw-bold mt-4 ms-4">LanGuess_</h5>
                                 </div>
 
                                 <h5 class="card-title display-8 fw-bold my-4">Worträtselspiel im Stil von 'Wordle'</h5>
@@ -726,7 +726,7 @@
                                     <i class="bi bi-youtube me-2"></i>Demo
                                 </a>
 
-                                <a href="https://github.com/alex-kadur/LinGuess_"
+                                <a href="https://github.com/alex-kadur/LanGuess_"
                                     class="btn btn-primary col-12 mb-2 col-md-4" role="button">
                                     <i class="bi bi-github me-3"></i>GitHub
                                 </a>
@@ -740,7 +740,7 @@
                                 <div id="collapseLinGuess" class="collapse">
                                     <div class="mt-4 card-text alert alert-info">
                                         <p>
-                                            LinGuess_ ist ein Worträtselspiel vergleichbar mit 'Wordle'. Spieler
+                                            LanGuess_ ist ein Worträtselspiel vergleichbar mit 'Wordle'. Spieler
                                             versuchen, ein Wort innerhalb einer begrenzten Anzahl von Versuchen zu
                                             erraten.<br>
 
