adjusted texts LinGuess_, FlashLine_

--- a/index.html
+++ b/index.html
@@ -109,11 +109,10 @@
                     <div class="">
                         <p>
                             Nach einer erfahrungsreichen Karriere habe ich mich 2023 entschlossen, den Sprung zu wagen
-                            und doch noch in einen Beruf zu wechseln, der meinen Fähigkeiten und Neigungen etspricht.
-                            Aktuell befinde ich mich in der Umschulung zum Fachinformatiker für Anwendungsentwicklung
-                            (IHK) und fühle mich in diesem Tätigkeitsfeld zu Hause. Seit April 2024 absolviere ich zudem
-                            ein ausbildungs-/berufsbegleitendes Studium der Informatik, um Ausbildungsinhalte zu
-                            vertiefen und mir v.a. erweitertes mathematisches Wissen anzueignen.<br>
+                            und doch noch in meinen Wunschberuf zu wechseln. Aktuell befinde ich mich in der Umschulung
+                            zum Fachinformatiker für Anwendungsentwicklung (IHK) und fühle mich in diesem Tätigkeitsfeld
+                            zu Hause. Seit April 2024 absolviere ich zudem ein ausbildungs-/berufsbegleitendes Studium
+                            der Informatik, um mir erweitertes Wissen anzueignen.<br>
 
                             <br>Durch meine bisherige Ausbildung und verschiedene Weiterbildungen verfüge ich bereits
                             über gute Grundkenntnisse in der Anwendungsentwicklung sowie im Umgang mit verschiedenen
@@ -567,7 +566,7 @@
                                 <div id="collapsePLAN" class="collapse">
                                     <div class="mt-4 card-text alert alert-info">
                                         <p>
-                                            Ich habe Planung studiert und die damit verbundenen Heran- und
+                                            Ich habe Planung studiert und die damit verbundene Denk- und
                                             Vorgehensweisen verinnerlicht. Dabei spielt es für mich keine Rolle, ob ich
                                             mein Wissen im Rahmen gröẞerer Projekte oder zur Selbstorganisation im
                                             Alltagsgeschäft anwende. Als analytisch veranlagter Mensch fällt es mir
@@ -638,7 +637,7 @@
                                     <div class="mt-4 card-text alert alert-info">
                                         <p>
                                             Als ehemaliger Kundenbetreuer liegt mir Kommunikation im Blut. Mit meiner
-                                            offenen und freundlichen Art konnte ich dabei Erfolge feiern und später
+                                            offenen und freundlichen Art konnte ich stets Erfolge feiern und später
                                             als Führungskraft und Performance-Coach meine zwischenmenschlichen
                                             Fähigkeiten weiter ausbauen.</p>
                                     </div>
@@ -697,8 +696,12 @@
                                     <div class="mt-4 card-text alert alert-info">
                                         <p>
                                             FlashLine_ ist eine Kommandozeilenanwendung zum erstellen, verwalten und
-                                            lernen von Karteikarten. Das Programm kommt mit einer eignen UI-Bibliothek
-                                            und Speicherfunktion über JSON.<br>
+                                            lernen von Karteikarten. Das Programm kommt mit einem eigens entwickelten
+                                            User-Interface und einer Speicherfunktion.<br>
+
+                                            <br>Die Anwendung wurde in Python geschrieben und erlaubte es mir, meine
+                                            Kenntnisse in Bezug auf Dateioperationen, Objektorientierung, Rekursion und
+                                            Benutzerinteraktion zu vertiefen.<br>
 
                                             <br>FlashLine_ wurde als Abschlussprojekt für CS50's Introduction to
                                             Programming with Python von HarvardX erstellt.
@@ -744,10 +747,12 @@
                                             versuchen, ein Wort innerhalb einer begrenzten Anzahl von Versuchen zu
                                             erraten.<br>
 
+                                            <br>Das Spiel wurde in C geschrieben und erlaubte es mir, meine Kenntnisse
+                                            in Hinblick auf Pointer, Speicherverwaltung, Linked Lists und
+                                            Output-Handling zu vertiefen.<br>
+
                                             <br>Das Spiel wurde ursprünglich für CS50’s Introduction to Computer Science
-                                            erstellt, ähnelt dieser originalen Form allerdings nur noch teilweise.
-                                            Das Programm wurde stark modifiziert und erweitert, um Abhängigkeiten zu
-                                            entfernen, die Spiellogik zu verfeinern und Funktionalitäten hinzuzufügen.
+                                            erstellt und nachfolgend stark modifiziert und erweitert.
                                         </p>
                                     </div>
                                 </div>
