--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
 
                                 <h5 class="card-title display-8 fw-bold my-4">Worträtselspiel im Stil von 'Wordle'</h5>
 
-                                <a href="" class="btn btn-primary col-12 mb-2 col-md-3" role="button">
+                                <a href="https://youtu.be/rZRwGp0S7ZU" class="btn btn-primary col-12 mb-2 col-md-3" role="button">
                                     <i class="bi bi-youtube me-2"></i>Demo
                                 </a>
 
