minor changes text

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="">
                         <p>
                             Nach einer erfahrungsreichen Karriere habe ich mich 2023 entschlossen, den Sprung zu wagen
-                            und doch noch in meinen Wunschberuf zu wechseln. Aktuell befinde ich mich in der Umschulung
+                            und meinen Wunschberuf zu ergreifen. Aktuell befinde ich mich in der Umschulung
                             zum Fachinformatiker für Anwendungsentwicklung (IHK) und fühle mich in diesem Tätigkeitsfeld
                             zu Hause. Seit April 2024 absolviere ich zudem ein ausbildungs-/berufsbegleitendes Studium
                             der Informatik, um mir erweitertes Wissen anzueignen.<br>
@@ -723,9 +723,10 @@
                                     <h5 class="card-title display-2 fw-bold mt-4 ms-4">LanGuess_</h5>
                                 </div>
 
-                                <h5 class="card-title display-8 fw-bold my-4">Worträtselspiel im Stil von 'Wordle'</h5>
+                                <h5 class="card-title display-8 fw-bold my-4">Ein anpassbares Worträtselspiel</h5>
 
-                                <a href="https://youtu.be/rZRwGp0S7ZU" class="btn btn-primary col-12 mb-2 col-md-3" role="button">
+                                <a href="https://youtu.be/rZRwGp0S7ZU" class="btn btn-primary col-12 mb-2 col-md-3"
+                                    role="button">
                                     <i class="bi bi-youtube me-2"></i>Demo
                                 </a>
 
