--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="mt-3 alert alert-info">
-                        <p><strong><i class="bi bi-exclamation-circle-fill pe-3"></i>Gegenwärtig bin ich auf der Suche
-                                nach einem Praktikumsplatz für den Zeitraum 30.09.2024 bis 21.05.2025.</strong><br>
-                            <br>Es handelt sich dabei um ein unvergütetes Pflichtpraktikum, welches für die Zulassung
-                            zur Prüfung vor der IHK vorgeschrieben ist.<br>
+                        <p><strong><i class="bi bi-exclamation-circle-fill pe-3"></i>Gegenwärtig absolviere ich eine
+                                Umschulung zum Fachinformatiker für Anwendungsentwicklung (IHK) - Abschluss
+                                07/2025.</strong><br>
+                            <br>Ich freue mich über jede Kontaktaufnahme zur Besprechung von Kooperationsmöglichkeiten
+                            oder Projektanfragen.<br>
                             <br><a href="#kontakt">Kommen Sie gern auf mich zu.</a>
                         </p>
                     </div>
@@ -116,8 +117,8 @@
 
                             <br>Durch meine bisherige Ausbildung und verschiedene Weiterbildungen verfüge ich bereits
                             über gute Grundkenntnisse in der Anwendungsentwicklung sowie im Umgang mit verschiedenen
-                            Programmiersprachen. Mein Wissen werde ich in der kommenden Zeit noch deutlich erweitern und
-                            tue dies gern gezielt in Absprache mit einem zukünftigen Praktikumsbetrieb bzw. Arbeitgeber.
+                            Programmiersprachen. Mein Wissen erweitere ich fortlaufend und tue dies gern gezielt in
+                            Absprache mit zukünftigen Arbeitgebern bzw. Kooperationspartnern.
                         </p>
                     </div>
                 </div>
@@ -184,7 +185,9 @@
                                                 Programmierung</span>
                                             <span class="d-inline-flex alert alert-info p-2">Programmiersprache:
                                                 Java</span>
-                                            <span class="d-inline-flex alert alert-secondary p-2">Datenverarbeitung in
+                                            <span class="d-inline-flex alert alert-info p-2">Grafische
+                                                Benutzeroberflächen mit Swing</span>
+                                            <span class="d-inline-flex alert alert-info p-2">Datenverarbeitung in
                                                 Java</span>
                                             <span class="d-inline-flex alert alert-secondary p-2">Interaktive
                                                 Webanwendungen mit Datenbankanbindung</span>
@@ -201,15 +204,15 @@
                                             Datenbanken, UML, Anwendungsentwicklung, prozedurale und objektorientierte
                                             Programmierung.<br>
 
-                                            <br>Bei der Erstellung einer Vielzahl von Befehlszeilen-Programmen
+                                            <br>Bei der Erstellung einer Vielzahl von Übungsprogrammen
                                             und der eigenständigen Konzeption und Umsetzung einiger komplexerer Pojekte,
                                             konnte ich bereits erste praktische Erfahrung im Feld Anwendungsentwicklung
                                             sammeln.<br>
 
                                             <br>Die Programmiersprachen meiner Wahl sind aktuell Python, C und Java.
                                             Python bildete meinen Einstieg in die Materie. C lerne ich vor allem, um
-                                            komplexere Zusammenhänge und Grundlagen zu verstehen. Bis Praktikumsbeginn
-                                            stellt nun Java im Zusammenhang mit objektorientierter Programmierung und
+                                            komplexere Zusammenhänge und Grundlagen zu verstehen. Java stellt im
+                                            Zusammenhang mit objektorientierter Programmierung und
                                             Datenverarbeitung einen inhaltlichen Schwerpunkt meiner Ausbildung dar.
                                         </p>
                                     </div>
@@ -242,7 +245,7 @@
                                     </div>
                                     <div class="mt-4 card-text alert alert-info">
                                         <p>
-                                            Ich bin ab diesem Sommersemester als Teilzeitstudierender im Studiengang
+                                            Ich bin seit 2024 als Teilzeitstudierender im Studiengang
                                             Informatik (B.Sc.) eingeschrieben. In der Vergangenheit habe ich bereits
                                             länger studiert, fühle mich der Herrausforderung gewachsen und freue mich
                                             auf anspruchsvolle Inhalte. Spezielles Interesse zeige ich dabei an der
@@ -318,10 +321,10 @@
                                             <span class="d-inline-flex alert alert-info p-2">Webentwicklung mit HTML,
                                                 CSS, JavaScript</span>
                                             <span class="d-inline-flex alert alert-info p-2">Framework: Bootstrap</span>
+                                            <span class="d-inline-flex alert alert-info p-2">Relationale
+                                                Datenbanken und SQL</span>
                                             <span class="d-inline-flex alert alert-secondary p-2">Sicherheit und
                                                 Kryptographie</span>
-                                            <span class="d-inline-flex alert alert-secondary p-2">Relationale
-                                                Datenbanken und SQL</span>
                                             <span class="d-inline-flex alert alert-secondary p-2">Framework:
                                                 Flask</span>
                                             <span class="d-inline-flex alert alert-secondary p-2">Künstliche Intelligenz
@@ -345,6 +348,74 @@
                                             unterschiedlichen Themenfeldern. Studierende, die bei 9 Problemstellungen
                                             (d. h. Programmieraufgaben) und einem Abschlussprojekt eine
                                             zufriedenstellende Punktzahl erreichen, erhalten ein Zertifikat.
+                                        </p>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <div class="card text-bg-body-secondary mt-3 border-info" style="width: 100%">
+                            <div class="card-header"><i class="bi bi-patch-check-fill me-3 fs-3"></i>abgeschlossene
+                                Weiterbildung</div>
+                            <div class="card-body">
+                                <h5 class="card-title">WBS Training<br>Software Developer Assistant</h5>
+
+                                <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseSDA" aria-expanded="false" aria-controls="collapseSDA">
+                                    <i class="bi bi-info-circle-fill me-3"></i>mehr
+                                </button>
+
+                                <div id="collapseSDA" class="collapse">
+                                    <div class="card card-body mt-3">
+                                        <div>
+                                            <span class="d-inline-flex alert alert-info p-2">Programmiersprache:
+                                                C</span>
+                                            <span class="d-inline-flex alert alert-info p-2">Programmiersprache:
+                                                Java</span>
+                                            <span class="d-inline-flex alert alert-info p-2">Planung und Entwicklung von
+                                                Softwareprojekten</span>
+                                            <span class="d-inline-flex alert alert-info p-2">Techniken der
+                                                Strukturierten Programmierung</span>
+                                            <span class="d-inline-flex alert alert-info p-2">Software-Engineering mit
+                                                UML</span>
+                                            <span class="d-inline-flex alert alert-info p-2">Imperative
+                                                Programmierung</span>
+                                            <span class="d-inline-flex alert alert-info p-2">Objektorientierte
+                                                Programmierung</span>
+                                            <span class="d-inline-flex alert alert-info p-2">Planung und Erstellung
+                                                relationaler Datenbanken</span>
+                                            <span class="d-inline-flex alert alert-info p-2">Bearbeiten und Abfragen von
+                                                Daten mit SQL</span>
+                                            <span class="d-inline-flex alert alert-info p-2">System-Technik (Netz- und
+                                                Hardwarekomponenten)</span>
+                                            <span class="d-inline-flex alert alert-info p-2">Aufbau von
+                                                Netzwerkstrukturen</span>
+                                            <span class="d-inline-flex alert alert-info p-2">Bereitstellung und
+                                                Verwaltung von Windows und Linux Betriebssystemen</span>
+                                        </div>
+                                    </div>
+                                    <div class="mt-4 card-tex alert alert-info">
+                                        <p>Software Developer Assistants verfügen über Kenntnisse in den Bereichen
+                                            Planung und Entwicklung von Softwareprojekten.<br>
+
+                                            <br>Sie sind in der Lage Techniken der Strukturierten Programmierung
+                                            (Programmablaufplan oder Nassi-Schneidermann) und des Software-Engineerings
+                                            (Unified Modelling Language) einzusetzen und die entworfenen Strukturen in
+                                            einer Programmiersprache (C, Java) umzusetzen. Die Planung und Erstellung
+                                            von relationalen Datenbanken gehört ebenso zu ihren Fähigkeiten wie das
+                                            Bearbeiten und Abfragen von Daten mit Hilfe der Sprache SQL.<br>
+
+                                            <br>Software Developer Assistants verfügen ausserdem über grundlegende
+                                            Kenntnisse in den Bereichen System-Technik (Netz- und Hardwarekomponenten),
+                                            im Aufbau von Netzwerkstrukturen und der Bereitstellung und Verwaltung von
+                                            Windows und Linux Betriebssystemen, einschliesslich der Einrichtung einer
+                                            Windows-Domäne mit Active Directory Domain Services.<br>
+
+                                            <br>Grundlagenwissen in den Bereichen Buchführung und Kosten- und
+                                            Leistungsrechnung runden das Portfolio ab.
                                         </p>
                                     </div>
                                 </div>
@@ -417,7 +488,7 @@
                             <div class="card-header"><i class="bi bi-patch-check-fill me-3 fs-3"></i>abgeschlossene
                                 Weiterbildung</div>
                             <div class="card-body">
-                                <h5 class="card-title">Responsive Web Design</h5>
+                                <h5 class="card-title">freeCodeCamp<br>Responsive Web Design</h5>
 
                                 <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseWEB" aria-expanded="false" aria-controls="collapseWEB">
