--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="row mt-3 align-items-center bg-primary bg-gradient p-4 rounded-2">
                 <div class="col-lg-6">
                     <h1 class="display-2 fw-bold">A. KADUR</h1>
-                    <h2 class="display-6">zukünftiger Software-Entwickler</h2>
+                    <h2 class="display-6">Anwendungsentwickler</h2>
                 </div>
 
                 <div class="col-lg-6 d-none d-sm-inline mt-5">
@@ -87,7 +87,7 @@
                         <p><strong><i class="bi bi-exclamation-circle-fill pe-3"></i>Gegenwärtig absolviere ich eine
                                 Umschulung zum Fachinformatiker für Anwendungsentwicklung (IHK) - Abschluss
                                 07/2025.</strong><br>
-                            <br>Ich freue mich über jede Kontaktaufnahme zur Besprechung von Kooperationsmöglichkeiten
+                            <br>Ich freue mich über Kontaktaufnahme zur Besprechung von Kooperationsmöglichkeiten
                             oder Projektanfragen.<br>
                             <br><a href="#kontakt">Kommen Sie gern auf mich zu.</a>
                         </p>
